--- a/ansible_role_prometheus/molecule/default/converge.yml
+++ b/ansible_role_prometheus/molecule/default/converge.yml
@@ -3,5 +3,5 @@
   hosts: all
   tasks:
     - name: "Include acme.ansible_role_prometheus"
-      include_role:
+      ansible.builtin.include_role:
         name: "acme.ansible_role_prometheus"
